// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-finalhandler should not return a body when using HEAD 1`] = `
Object {
  "body": undefined,
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "status": 404,
  "statusText": undefined,
  "trailers": Object {},
}
`;

exports[`servie-finalhandler should return a 404 response 1`] = `
Object {
  "body": "Cannot GET /",
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-length": "12",
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "status": 404,
  "statusText": undefined,
  "trailers": Object {},
}
`;
